<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_priority_high_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_mantra"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/menu_mantra" />
        <item
            android:id="@+id/nav_corona"
            android:icon="@drawable/ic_ondemand_video_black_24dp"
            android:title="@string/menu_corona" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/menu_support" />
    </group>
</menu>
