<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dvrblacktech.coronahelper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.dvrblacktech.coronahelper.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dvrblacktech.coronahelper.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_mantra"
        android:name="com.dvrblacktech.coronahelper.ui.mantra.mantraFragment"
        android:label="@string/menu_mantra"
        tools:layout="@layout/fragment_mantra" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.dvrblacktech.coronahelper.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_corona"
        android:name="com.dvrblacktech.coronahelper.ui.corona.coronaFragment"
        android:label="@string/menu_corona"
        tools:layout="@layout/fragment_corona" />


    <fragment
        android:id="@+id/nav_support"
        android:name="com.dvrblacktech.coronahelper.ui.support.supportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />
</navigation>